# dev-notes

frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/common/: fetcher.ts  note.ts  title.ts  token.tsx  useAdmin.ts  useIntersect.ts  useNotes.ts
frontend/components/: Button.tsx  CreateNote.tsx  Header.tsx  Loading.tsx  MainView.tsx  Note.tsx  NoteList.tsx  Tag.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx
frontend/pages/c/: [category].tsx
frontend/styles/: Button.module.css  CreateNote.module.css  Header.module.css  Loading.module.css  Login.module.css  MainView.module.css  Note.module.css  Tag.module.css  globals.css
worker/: .gitignore  Cargo.toml  wrangler.toml
worker/src/: auth.rs  category.rs  lib.rs  note.rs
