[package]
name = "dev-notes-worker"
version = "0.0.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono ={ version = "0.4", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
lto = true
strip = true
codegen-units = 1
